remove unused menu

--- a/app/app.html
+++ b/app/app.html
@@ -4,12 +4,12 @@
 
   <ion-content>
     <ion-list>
-      <ion-list-header>Home Search</ion-list-header>
+      <ion-list-header>Linde Demo</ion-list-header>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         <ion-icon item-left name="{{p.icon}}"></ion-icon>
         {{p.title}}
       </button>
-      <ion-list-header>Mortgage</ion-list-header>
+      <!--<ion-list-header>Mortgage</ion-list-header>
       <button menuClose ion-item >
         <ion-icon item-left name="checkbox"></ion-icon>
         Get Pre-Approved
@@ -26,7 +26,7 @@
       <button menuClose ion-item >
         <ion-icon item-left name="settings"></ion-icon>
         Settings
-      </button>
+      </button>-->
     </ion-list>
   </ion-content>
 
